--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"graphql": "^16.6.0",
+		"graphql-request": "^6.1.0",
 		"svelte-icons": "^2.1.0"
 	}
 }
